data/derived/sp14/progs/unify/prog2125.ml.out
Characters 33-45:
  let stringOfList f l = sepConcat (List.map f);;
                                   ^^^^^^^^^^^^
Error: This expression has type 'a list -> 'b list
       but an expression was expected of type string
